fix vertical align in list

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -208,7 +208,7 @@ span.item-list-button {
 .city-item-container {
     display: flex;
     width: 100%;
-    padding: 0 16px;
+    padding: 8px 16px;
     height: inherit;
     align-items: inherit;
 }
